Fix overflow-x issue on homepage

--- a/static/styles.css
+++ b/static/styles.css
@@ -198,6 +198,10 @@ li + li {
 }
 
 /* Block */
+html {
+	overflow-x: hidden;
+}
+
 body {
 	display: flex;
 	flex-direction: column;
